<resources>
    <string name="app_name">Music App </string>
    <string name="category_enrique">Enrique Iglesias</string>
    <string name="category_sia">Sia</string>
    <string name="category_talal">Talal Maddah</string>
    <string name="category_adele">Adele</string>
    <string name="back"><![CDATA[<]]></string>
    <string name="rewind"><![CDATA[<<]]></string>
    <string name="forward"><![CDATA[>>]]></string>
    <string name="pause">||</string>
    <string name="title_activity_enrique_media">EnriqueMedia</string>

</resources>
